--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Day - HTML Bootstrap Template</title>
+  <title>About Us</title>
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -34,7 +34,8 @@
                         <span class="icon-bar"></span>
                     </button>
           <div class="navbar-brand">
-            <a href="index.html"><h1>Day</h1></a>
+            <a href="index.html"><h1>Killen Outdoors
+                <img class="menu-graphic" src="/img/resized%20KO%20logo.png" alt="Logo"></h1></a>
           </div>
         </div>
         <div class="navbar-collapse collapse">
@@ -42,7 +43,7 @@
             <ul class="nav nav-tabs" role="tablist">
               <li role="presentation"><a href="index.html">Home</a></li>
               <li role="presentation"><a href="about.html" class="active">About Us</a></li>
-              <li role="presentation"><a href="services.html">Services</a></li>
+              <li role="presentation"><a href="services.html">Adventures</a></li>
               <li role="presentation"><a href="gallery.html">Gallery</a></li>
               <li role="presentation"><a href="shop.html">Shop</a></li>
               <li role="presentation"><a href="contact.html">Contact</a></li>
@@ -59,261 +60,32 @@
   <div class="about">
     <div class="container">
       <div class="text-center">
-        <h2>Quaerat quod voluptate consequuntur </h2>
+        <h2>Who are we? </h2>
+          <div><img class="portrait" src="/img/42990040.jpg" alt="Mary and Eric Killen">
+          </div>
         <div class="col-md-10 col-md-offset-1">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat quod voluptate consequuntur ad quasi, dolores obcaecati ex aliquid, dolor provident accusamus omnis dolorum ipsam. Voluptatem ipsum expedita, corporis facilis laborum asperiores
-            nostrum! Amet porro numquam ratione temporibus quia dolorem sint lorem voluptates quasi mollitia.</p>
+          <p>We are Mary and Eric Killen we own and operate Killen Outdoor Adventures. Since Eric was young he dreamed of traveling and hunting around the world. Today, Eric and I feel blessed to be able to make your hunting dreams a reality.<br> We strive to provide excellent adventures, itineraries, and experiences for our clients. As hunters, we have personally experiences all of the adventures we offer you and with over 25 years of combined experience, we bring much needed knowledge to the table. With many locations within the United Stated as well as arond the globe, we Feel we have the perfect hunting experience for you</p>
         </div>
 
         <div class="col-md-6 col-sm-6 col-xs-6">
-          <div class="btn-gamp"><a href="#">Learn More</a></div>
+          <div class="btn-gamp"><a href="/contact.html">Contact Us</a></div>
         </div>
         <div class="col-md-6 col-sm-6 col-xs-6">
-          <div class="gamp-btn"><a href="#">download</a></div>
+          <div class="gamp-btn"><a href="/services.html">Adventures</a></div>
         </div>
 
       </div>
     </div>
   </div>
   <hr>
-
+<div>
   <section id="about-us">
     <div class="container">
       <div class="text-center wow fadeInDown">
-        <h2>Skills</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
-      </div>
-      <div class="skill-wrap clearfix">
-        <div class="row">
-          <div class="col-sm-3">
-            <div class="sinlge-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-              <div class="joomla-skill">
-                <p><em>85%</em></p>
-                <p>Joomla</p>
-              </div>
-            </div>
-          </div>
+        
+ 
 
-          <div class="col-sm-3">
-            <div class="sinlge-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-              <div class="html-skill">
-                <p><em>95%</em></p>
-                <p>HTML</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-3">
-            <div class="sinlge-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
-              <div class="css-skill">
-                <p><em>80%</em></p>
-                <p>CSS</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-3">
-            <div class="sinlge-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms">
-              <div class="wp-skill">
-                <p><em>90%</em></p>
-                <p>Wordpress</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- our-team -->
-      <div class="team">
-        <div class="text-center wow fadeInDown">
-          <h2>Team of Day</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
-        </div>
-
-        <div class="row clearfix">
-          <div class="col-md-4 col-sm-6">
-            <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-              <div class="media">
-                <div class="pull-left">
-                  <a href="#"><img class="media-object" src="img/man1.jpg" alt=""></a>
-                </div>
-                <div class="media-body">
-                  <h4>Jhon Doe</h4>
-                  <h5>Founder and CEO</h5>
-                  <ul class="tag clearfix">
-                    <li class="btn"><a href="#">Web</a></li>
-                    <li class="btn"><a href="#">Ui</a></li>
-                    <li class="btn"><a href="#">Ux</a></li>
-                    <li class="btn"><a href="#">Photoshop</a></li>
-                  </ul>
-
-                  <ul class="social_icons">
-                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                  </ul>
-                </div>
-              </div>
-              <!--/.media -->
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-            </div>
-          </div>
-          <!--/.col-lg-4 -->
-
-
-          <div class="col-md-4 col-sm-6 col-md-offset-2">
-            <div class="single-profile-top wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-              <div class="media">
-                <div class="pull-left">
-                  <a href="#"><img class="media-object" src="img/man2.jpg" alt=""></a>
-                </div>
-                <div class="media-body">
-                  <h4>Jhon Doe</h4>
-                  <h5>Founder and CEO</h5>
-                  <ul class="tag clearfix">
-                    <li class="btn"><a href="#">Web</a></li>
-                    <li class="btn"><a href="#">Ui</a></li>
-                    <li class="btn"><a href="#">Ux</a></li>
-                    <li class="btn"><a href="#">Photoshop</a></li>
-                  </ul>
-                  <ul class="social_icons">
-                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                  </ul>
-                </div>
-              </div>
-              <!--/.media -->
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-            </div>
-          </div>
-          <!--/.col-lg-4 -->
-        </div>
-        <!--/.row -->
-        <div class="row team-bar">
-          <div class="first-one-arrow hidden-xs">
-            <hr>
-          </div>
-          <div class="first-arrow hidden-xs">
-            <hr> <i class="fa fa-angle-up"></i>
-          </div>
-          <div class="second-arrow hidden-xs">
-            <hr> <i class="fa fa-angle-down"></i>
-          </div>
-          <div class="third-arrow hidden-xs">
-            <hr> <i class="fa fa-angle-up"></i>
-          </div>
-          <div class="fourth-arrow hidden-xs">
-            <hr> <i class="fa fa-angle-down"></i>
-          </div>
-        </div>
-        <!--skill_border-->
-
-        <div class="row clearfix">
-          <div class="col-md-4 col-sm-6 col-md-offset-2">
-            <div class="single-profile-bottom wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="600ms">
-              <div class="media">
-                <div class="pull-left">
-                  <a href="#"><img class="media-object" src="img/man3.jpg" alt=""></a>
-                </div>
-
-                <div class="media-body">
-                  <h4>Jhon Doe</h4>
-                  <h5>Founder and CEO</h5>
-                  <ul class="tag clearfix">
-                    <li class="btn"><a href="#">Web</a></li>
-                    <li class="btn"><a href="#">Ui</a></li>
-                    <li class="btn"><a href="#">Ux</a></li>
-                    <li class="btn"><a href="#">Photoshop</a></li>
-                  </ul>
-                  <ul class="social_icons">
-                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                  </ul>
-                </div>
-              </div>
-              <!--/.media -->
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 col-md-offset-2">
-            <div class="single-profile-bottom wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="600ms">
-              <div class="media">
-                <div class="pull-left">
-                  <a href="#"><img class="media-object" src="img/man4.jpg" alt=""></a>
-                </div>
-                <div class="media-body">
-                  <h4>Jhon Doe</h4>
-                  <h5>Founder and CEO</h5>
-                  <ul class="tag clearfix">
-                    <li class="btn"><a href="#">Web</a></li>
-                    <li class="btn"><a href="#">Ui</a></li>
-                    <li class="btn"><a href="#">Ux</a></li>
-                    <li class="btn"><a href="#">Photoshop</a></li>
-                  </ul>
-                  <ul class="social_icons">
-                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                  </ul>
-                </div>
-              </div>
-              <!--/.media -->
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-            </div>
-          </div>
-        </div>
-        <!--/.row-->
-      </div>
-      <!--section-->
-    </div>
-    <!--/.container-->
-  </section>
-  <!--/about-us-->
-
- <footer>
-        <div class="container">
-            <div class="col-bt-align wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-                <h4>About Us</h4>
-                <p>Day is tellus ac cursus commodo, mauesris condime ntum nibh, ut fermentum mas justo sitters.</p>
-                <div class="contact-info">
-                    <ul>
-                        <li><i class="fa fa-home fa"></i>Suite 54 Elizebth Street, Victoria State Newyork, USA </li>
-                        <li><i class="fa fa-phone fa"></i> +38 000 129900</li>
-                        <li><i class="fa fa-envelope fa"></i> info@domain.net</li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="col-bt-align wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-                <div class="text-center">
-                    <h4>Photo Gallery</h4>
-                    <ul class="sidebar-gallery">
-                        <li><a href="#"><img src="img/gallery1.png" alt="" /></a></li>
-                        <li><a href="#"><img src="img/gallery2.png" alt="" /></a></li>
-                        <li><a href="#"><img src="img/gallery3.png" alt="" /></a></li>
-                        <li><a href="#"><img src="img/gallery4.png" alt="" /></a></li>
-                        <li><a href="#"><img src="img/gallery5.png" alt="" /></a></li>
-                        <li><a href="#"><img src="img/gallery6.png" alt="" /></a></li>
-                    </ul>
-                </div>
-            </div>
-
-        </div>
-    </footer>
-
-   <div class="sub-footer">
-    <div class="container">
-      <div class="social-icon">
-        <div class="col-md-4">
-          <ul class="social-network">
-            <li><a href="#" class="fb tool-tip" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-            
-            <li><a href="#" class="ytube tool-tip" title="You Tube"><i class="fa fa-youtube-play"></i></a></li>
-          </ul>
-        </div>
-      </div>
+   
 
       <div class="col-md-4 col-md-offset-4">
         <div class="copyright">
@@ -325,13 +97,13 @@
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Day
             -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade: Edited by Thomas Barnett</a>
+            Template by <a href="https://bootstrapmade.com/">BootstrapMade</a>: Designed and published by Thomas Barnett
           </div>
         </div>
       </div>
     </div>
   </div>
-
+  
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="js/jquery.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -340,7 +112,8 @@
   <script>
     wow = new WOW({}).init();
   </script>
-
+    </section>
+    </div>
 </body>
 
 </html>
