--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
           <div><img class="portrait" src="/img/42990040.jpg" alt="Mary and Eric Killen">
           </div>
         <div class="col-md-10 col-md-offset-1">
-          <p>We are Mary and Eric Killen we own and operate Killen Outdoor Adventures. Since Eric was young he dreamed of traveling and hunting around the world. Today, Eric and I feel blessed to be able to make your hunting dreams a reality.<br> We strive to provide excellent adventures, itineraries, and experiences for our clients. As hunters, we have personally experiences all of the adventures we offer you and with over 25 years of combined experience, we bring much needed knowledge to the table. With many locations within the United Stated as well as arond the globe, we Feel we have the perfect hunting experience for you</p>
+          <p class="aboutusa">We are Mary and Eric Killen we own and operate Killen Outdoor Adventures. Since Eric was young he dreamed of traveling and hunting around the world. Today, Eric and I feel blessed to be able to make your hunting dreams a reality.<br><br> We strive to provide excellent adventures, itineraries, and experiences for our clients. As hunters, we have personally experiences all of the adventures we offer you and with over 25 years of combined experience, we bring much needed knowledge to the table. With many locations within the United Stated as well as arond the globe, we Feel we have the perfect hunting experience for you</p>
         </div>
 
         <div class="col-md-6 col-sm-6 col-xs-6">
@@ -76,9 +76,20 @@
 
       </div>
     </div>
+    <div class="aboutusa">
+      <div><h2>Don't take it from us.</h2>
+          <p class="aboutusa">"Hunting with Eric Killen and his team at <b><u>Killen Outdoors</u></b> is always an exciting and enjoyable experience! I have been using <b><u>Killen Outdoors</u></b> since 2015….and Eric has always delivered! Fortunately, I have a job where I get to take clients that do business with me on hunting and fishing trips and no matter what outing I choose for my clients,Eric always has the perfect place.
+              
+              <br><br>Whether it is dove, aoudad, white tail, red stag, axis, black buck, to shooting hogs from a helicopter <b><u>Killen Outdoors</u></b> always has exceeded our expectations.
+              
+            <br><br>Eric also has multiple locations for Deep Sea Fishing trips as well that are fantastic! Whatever my outing needs are I always count on Eric Killen and <b><u>Killen Outdoors</u></b>to help me and my clients choose just the right place!" <br><br>
+
+              --Trent C.
+          </p>
+      </div>
   </div>
-  <hr>
-<div>
+</div>
+      <div>
   <section id="about-us">
     <div class="container">
       <div class="text-center wow fadeInDown">
