--- a/index.html
+++ b/index.html
@@ -84,14 +84,13 @@
                                 </div>
                             </div>
                             <div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.9s">
-                                <form class="form-inline">
-                                    <div class="form-group">
-                                        <button type="livedemo" name="Live Demo" class="btn btn-primary btn-lg" required="required">Contact Us</button>
+                               <div class="form-group">
+                                         <a href="contact.html"><button type="livedemo" name="Live Demo" class="btn btn-primary btn-lg" required="required">Contact Us</button></a>
                                     </div>
                                     <div class="form-group">
-                                        <button type="getnow" name="Get Now" class="btn btn-primary btn-lg" required="required">Adventure Gallery</button>
+                                        <a href="services.html"> <button type="getnow" name="Get Now" class="btn btn-primary btn-lg" required="required"> Adventure Gallery</button></a>
                                     </div>
-                                </form>
+                               
                             </div>
                         </div>
                     </div>
@@ -149,10 +148,10 @@
                 </div>
 
                 <div class="col-md-6 col-sm-6 col-xs-6">
-                    <div class="btn-gamp"><a href="#">See the sights</a></div>
+                    <div class="btn-gamp"><a href="gallery.html">See the sights</a></div>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-6">
-                    <div class="gamp-btn"><a href="#">hear the stories</a></div>
+                    <div class="gamp-btn"><a href="about.html">Hear the stories</a></div>
                 </div>
 
             </div>
