--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
         <p>For the best service and experience please call us. We would love to hear from you! By talking to us not only can we render the best service possible but we can help you make sure your next Killen Outdoor Adventure will be unforgettable!</p>
         <div class="contact-info">
           <ul>
-           <li><i class="fa fa-phone fa"></i> +38 000 129900</li>
+              <li><i class="fa fa-phone fa"></i><b> (256)740-1917</b></li>
            </ul>
         </div>
       </div>
