--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
           <div class="navbar-brand">
             <a href="index.html">
                 <h1>Killen Outdoors
-                <img class="menu-graphic" src="/img/resized%20KO%20logo.png" alt="Logo">
+                <img class="menu-graphic" src="/img/resized_KO_logo.png" alt="Logo">
                             </h1>
             </a>
           </div>
