--- a/services.html
+++ b/services.html
@@ -29,7 +29,7 @@
                         <span class="icon-bar"></span>
                     </button>
           <div class="navbar-brand">
-              <a href="index.html"><h1>Killen Outdoors<img class="menu-graphic" src="/img/resized%20KO%20logo.png" alt="Logo"></h1></a>
+              <a href="index.html"><h1>Killen Outdoors<img class="menu-graphic" src="/img/resized_KO_logo.png" alt="Logo"></h1></a>
           </div>
         </div>
         <div class="navbar-collapse collapse">
