--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
                     </button>
           <div class="navbar-brand">
             <a href="index.html"><h1>Killen Outdoors
-                <img class="menu-graphic" src="/img/resized_KO_logo.png" alt="Logo"></h1></a>
+                <img class="menu-graphic" src="img/resized_KO_logo.png" alt="Logo"></h1></a>
           </div>
         </div>
         <div class="navbar-collapse collapse">
