--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
     <div class="container">
       <div class="text-center">
         <h2>Who are we? </h2>
-          <div><img class="portrait" src="/img/42990040.jpg" alt="Mary and Eric Killen">
+          <div><img class="portrait" src="img/42990040.jpg" alt="Mary and Eric Killen">
           </div>
         <div class="col-md-10 col-md-offset-1">
           <p class="aboutusa">We are Mary and Eric Killen we own and operate Killen Outdoor Adventures. Since Eric was young he dreamed of traveling and hunting around the world. Today, Eric and I feel blessed to be able to make your hunting dreams a reality.<br><br> We strive to provide excellent adventures, itineraries, and experiences for our clients. As hunters, we have personally experiences all of the adventures we offer you and with over 25 years of combined experience, we bring much needed knowledge to the table. With many locations within the United Stated as well as arond the globe, we Feel we have the perfect hunting experience for you</p>
