--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="text-center">
                 <h2>Our Goal </h2>
                 <div class="col-md-10 col-md-offset-1">
-                    <p class="goals">We look forward to providing opportunities for family and individual adventures at senic locations around the world. Explore the vast forest of North America. Embrace the wild on the plains of Africa. Enjoy the scene as the sky and ocean meet on the horizion. Endavor the frigid tundras of the artic. Killen Outdoors guarantees the family trip that you'll never forget.</p>
+                    <p class="goals">We look forward to providing opportunities for family and individual adventures at scenic locations around the world. Explore the vast forest of North America. Embrace the wild on the plains of Africa. Enjoy the scene as the sky and ocean meet on the horizion. Endeavor the frigid tundras of the arctic. Killen Outdoors guarantees the family trip that you'll never forget.</p>
                 </div>
 
                 <div class="col-md-6 col-sm-6 col-xs-6">
