--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <div class="container">
             <div class="left-text hidden-xs">
                 <h4>Family owned and operated</h4>
-                <p class="aboutus"><em>From business and corprate trips to family encounters, we invite and accomade all.</em><br><br>Since we are family owned and operated, we are thrilled to provide family expereinces. We are thrilled to see families expirence nature in a true and authentic way.</p>
+                <p class="aboutus"><em>From business and corprate trips to family encounters, we invite and accommodate all.</em><br><br>Since we are family owned and operated, we are thrilled to provide family experiences. We are thrilled to see families experience nature in a true and authentic way.</p>
             </div>
             <div class="right-image hidden-xs"></div>
         </div>
