--- a/services.html
+++ b/services.html
@@ -58,12 +58,12 @@
         <div class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
           <i class="fa fa-heart-o"></i>
           <h3>Unforgettable Memories</h3>
-          <p>Making memories that will last you a lifetime. All memories made on a Killen Outdoor Adventure is entirley yours to keep and to carry with you for the rest of your life.</p>
+          <p>Making memories that will last you a lifetime. All memories made on a Killen Outdoor Adventure is entirely yours to keep and to carry with you for the rest of your life.</p>
         </div>
         <div class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
           <i class="fa fa-cloud"></i>
           <h3>Breathtaking sights</h3>
-          <p>Seeing the sights that will leave you speachless. This world hold many places that are truly exotic and beautiful. Our goal is to help you experience nature in all of its awe and wonder.</p>
+          <p>Seeing the sights that will leave you speechless. This world holds many places that are truly exotic and beautiful. Our goal is to help you experience nature in all of its awe and wonder.</p>
         </div>
         <div class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
           <i class="fa fa-book"></i>
@@ -107,7 +107,7 @@
                     <div class="grid-item">
                         Javelina</div>
                     <div class="grid-item">
-                        Canadian Balck Bear
+                        Canadian Black Bear
                     
                     </div>
                     <div class="grid-item">
@@ -117,7 +117,7 @@
                     <div class="grid-item">Wolves
                     </div>
                     <div class="grid-item">
-                        Speckeled Trout
+                        Speckled Trout
                     </div>
                     <div class="grid-item">
                         Red Fishing
