--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             </div>
                             <div class="col-md-10 col-md-offset-1">
                                 <div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.6s">
-                                    <p>We look forward to hear from you</p>
+                                    <p>We look forward to hearing from you</p>
                                 </div>
                             </div>
                             <div class="wow fadeInUp" data-wow-offset="0" data-wow-delay="0.9s">
